2022-02-22  Chris Dumez  <cdumez@apple.com>

        http/wpt/push-api/onpush-disabled.html fails
        https://bugs.webkit.org/show_bug.cgi?id=236874
        <rdar://problem/89176154>

        Reviewed by Youenn Fablet.

        Unskip test that should no longer be flaky.

        * TestExpectations:

2022-02-22  Tim Nguyen  <ntim@apple.com>

        Use of showModalDialog should appear as a warning in WI console
        https://bugs.webkit.org/show_bug.cgi?id=237046

        Reviewed by Devin Rousso and Darin Adler.

        Test gardening to take in account new console warning.

        * fast/animation/request-animation-frame-during-modal-expected.txt:
        * fast/dom/Window/open-window-min-size-expected.txt:
        * fast/events/show-modal-dialog-onblur-onfocus-expected.txt:
        * http/tests/cookies/document-cookie-after-showModalDialog-expected.txt:
        * http/tests/security/navigate-when-restoring-cached-page-expected.txt:
        * http/tests/security/showModalDialog-sync-cross-origin-page-load2-expected.txt:

2022-02-22  Ryan Haddad  <ryanhaddad@apple.com>

        Unreviewed test gardening for rdar://86037417.

        * platform/mac-wk2/TestExpectations:

2022-02-22  Frédéric Wang  <fwang@igalia.com>

        null ptr deref via WebXRSystem::requestSession
        https://bugs.webkit.org/show_bug.cgi?id=235916

        Reviewed by Dean Jackson.

        Add non-regression test.

        * webxr/xr-requestSession-crash-expected.txt: Added.
        * webxr/xr-requestSession-crash.html: Added.

2022-02-22  Philippe Normand  <pnormand@igalia.com>

        [GStreamer] Initial MediaRecorder implementation
        https://bugs.webkit.org/show_bug.cgi?id=236558

        Reviewed by Xabier Rodriguez-Calvar.

        Flag the remaining MediaRecorder test failures. Those will be adressed in follow-up patches.

        * http/wpt/mediarecorder/pause-recording.html:
        * platform/glib/TestExpectations:
