@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype html><!-- webkit-test-runner [ WebRTCRemoteVideoFrameEnabled=false ] -->
 <html>
 <head>
     <meta name="timeout" content="long">
