@@ -1,3 +1,12 @@
+2022-02-23  Youenn Fablet  <youenn@apple.com>
+
+        Enable WebRTCRemoteVideoFrameEnabled by default in WebKitTestRunner
+        https://bugs.webkit.org/show_bug.cgi?id=236969
+
+        Reviewed by Eric Carlson.
+
+        * WebKitTestRunner/TestOptions.cpp:
+
 2022-02-22  Chris Dumez  <cdumez@apple.com>
 
         Drop StringHasher::hashMemory() and use the modern Hasher instead
