@@ -1,3 +1,15 @@
+2022-02-23  Youenn Fablet  <youenn@apple.com>
+
+        Enable WebRTCRemoteVideoFrameEnabled by default in WebKitTestRunner
+        https://bugs.webkit.org/show_bug.cgi?id=236969
+
+        Reviewed by Eric Carlson.
+
+        Disable WebRTCRemoteVideoFrameEnabled for those two tests until we figure out why they fail more with this option.
+
+        * fast/mediastream/getUserMedia-to-canvas-1.html:
+        * fast/mediastream/getUserMedia-to-canvas-2.html:
+
 2022-02-22  Chris Dumez  <cdumez@apple.com>
 
         http/wpt/push-api/onpush-disabled.html fails
